started follow functionality

--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -35,6 +35,7 @@
           padding: 0.6rem 1.3rem;
           border: none;
           border-radius: 0.5rem;
+          cursor: pointer;
         }
 
         & h1 {
