--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -5,6 +5,10 @@
     align-items: center;
     border-bottom: 1px solid #dbdbdb;
 
+    @media screen and (max-width: 800px) {
+      padding: 2rem 3rem;
+    }
+
     &-logo {
       flex: 1;
 
@@ -12,6 +16,11 @@
         border-radius: 50%;
         height: 15rem;
         width: 15rem;
+
+        @media screen and (max-width: 800px) {
+          height: 10rem;
+          width: 10rem;
+        }
       }
     }
 
